# py_thai_num

./: LICENSE  README.md  README.rst  setup.cfg  setup.py
src/py_thai_num/py_thai_num/: file_thai_num.py  py_thai_num.py
tests/py_thai_num/: result1  test_py_thai_num.py  testcase1  testcase2
