[metadata]
description-file=README.md
long-description-content-type = text/markdown
license_files=LICENSE.rst
name            = py_thai_num
author          = Worakrit Sittirit
author-email    = kritsitti.coe@gmail.com
summary         = conversion Thai numerical to global numerical
project_urls =
    Source Code = https://github.com/worakrit-sittirit/py_thai_num